# fcgircd

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.ac  fcgircd.c
src/: event.c  fcgircd.c  fcgircd.h  html.c  net.c  utility.c
templates/: connect_form.html  fcgircd.css  fcgircd.js  footer.html  header.html
